<resources>
    <string name="app_name">Hello World</string>
    <string name="my_message">Vola..!! it worked</string>
    <string name="title_activity_example">Example</string>
    <string name="title">Title</string>
    <string name="message">Message</string>
    <string name="start">Start</string>
    <string name="today">Today</string>
    <string name="end">End</string>
    <string name="select_location">Select Location</string>
    <string name="repeating">Repeating</string>
    <string name="my_content">My content</string>
</resources>
